--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,15 @@
     "target": "es2020",
     "strict": true,
     "preserveConstEnums": true,
-    "noEmit": true,
     "sourceMap": false,
     "module":"commonjs",
     "moduleResolution":"node",
     "esModuleInterop": true, 
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true, 
-    "isolatedModules": true, 
+    "isolatedModules": true,
+    "rootDir": "./src",
+    "outDir": "./dist"
   },
   "exclude": ["node_modules", "**/*.test.ts"]
 }
