--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "zip": "cp dist/index.js . && zip -r handler.zip index.js node_modules && rm index.js",
+    "zip": "tsc && cp dist/index.js . && zip -r handler.zip index.js node_modules && rm index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
